ChangeLog for solinger-cracklib
Copyright 2007 Interactive Information R&D (http://www.i2rd.com)

*solinger-cracklib-0.5.1 (29 Oct 2007)

  29 Oct 2007; Pat Double <double@i2rd.com> : CrackLib.java
  Remove temporary files after opening to keep temporary directory
  from filling up.

*solinger-cracklib-0.5.0 (12 Oct 2007)

  02 Oct 2007; Pat Double <double@i2rd.com> :
  Initial import of version 0.5.
  